<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MTG Tools</string>
    <string name="action_settings">Settings</string>
    <string name="action_aboutme">Acerca de</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="option_cards">Cartas</string>
    <string name="option_dice">Contador de Vidas</string>
    <string name="option_card_list">Cartas</string>
    <string name="option_card_detail">Carta</string>

	 <string name="card_detail_name">Nombre de la Carta</string>
	 <string name="card_detail_mana">Costo de Mana</string>
	 <string name="card_detail_type">Tipos</string>
	 <string name="card_detail_text">Texto de la carta</string>
	 <string name="card_detail_number">Número de Carta</string>
	 <string name="card_detail_artist">Artista</string>
	 <string name="card_detail_rarity">Rareza</string>
	 <string name="card_detail_expansion">Expansión</string>

    <string name="aboutme_title">MTG Tools 0.7</string>
    <string name="aboutme_msg">Gracias por emplear MTG Tools, si tuvieras alguna consulta o sugerencia o error que presentar no dudes en escribirnos</string>
    <string name="aboutme_link">http://apiconz.blogspot.com</string>
    <string name="aboutme_disclaimer">©2013 Wizards of the Coast LLC. Wizards of the Coast, Magic: The Gathering, Duels of the Planeswalkers y sus respectivos logos son marcas registradas de Wizards of the Coast LLC en los Estados Unidos y otros países.</string>

</resources>
