<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/card_detail_name"
            android:src="@drawable/card_back" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_name"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" android:padding="5dp" />

                <TextView
                    android:id="@+id/txtDetailName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_mana"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" android:padding="5dp" />

                <TextView
                    android:id="@+id/txtDetailMana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_type"
                    android:textStyle="bold" android:padding="5dp" />

                <TextView
                    android:id="@+id/txtDetailType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_text"
                    android:textStyle="bold" android:padding="5dp" />

                <TextView
                    android:id="@+id/txtDetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_expansion"
                    android:textStyle="bold" android:padding="5dp" />

                <TextView
                    android:id="@+id/txtDetailExpansion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_number"
                    android:textStyle="bold" android:padding="5dp" />

                <TextView
                    android:id="@+id/txtDetailNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_rarity"
                    android:textStyle="bold" android:padding="5dp" />

                <TextView
                    android:id="@+id/txtDetailRarity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_artist"
                    android:textStyle="bold" android:padding="5dp" />

                <TextView
                    android:id="@+id/txtDetailArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>